# as5600-sensor-zephyr

./: .gitignore  .gitmodules  CMakeLists.txt  Como instalar o Zephyr RTOS manualmente (MacOS).md  Como instalar o Zephyr RTOS manualmente (Windows).md  Kconfig  README.md  README.pt-br.md  app.overlay  build.sh  flash.sh  openocd_hla.cfg  prj.conf
dts/bindings/: generic-engine.yaml
src/: main.c
